--- a/dashboard.html
+++ b/dashboard.html
@@ -132,7 +132,8 @@
         </div>
     </section>
 
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="script.js" defer></script>
     <script>
         // Load user data
         document.addEventListener('DOMContentLoaded', function() {
@@ -150,3 +151,4 @@
     </script>
 </body>
 </html>
+
