--- a/tutor-dashboard.html
+++ b/tutor-dashboard.html
@@ -234,7 +234,8 @@
         </div>
     </section>
 
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="script.js" defer></script>
     <script>
         // Load user data
         document.addEventListener('DOMContentLoaded', function() {
@@ -269,3 +270,4 @@
     </script>
 </body>
 </html>
+
