--- a/book-session.html
+++ b/book-session.html
@@ -146,7 +146,8 @@
         </div>
     </section>
 
-    <script src="script.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="script.js" defer></script>
     <script>
         // Load selected teacher data
         document.addEventListener('DOMContentLoaded', function() {
@@ -159,3 +160,4 @@
     </script>
 </body>
 </html>
+
