--- a/find-tutors.html
+++ b/find-tutors.html
@@ -757,7 +757,8 @@
         </div>
     </section>
 
-    <script src="script.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="script.js" defer></script>
     <script>
         // Handle URL parameters
         document.addEventListener('DOMContentLoaded', function() {
@@ -778,3 +779,4 @@
     </script>
 </body>
 </html>
+
