--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
         </div>
     </section>
 
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="script.js" defer></script>
 </body>
+
 </html>
